--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" th:href="@{/admin}">Admin Panel</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/user}">User Panel</a>
+                </li>
             </ul>
         </div>
 
