--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -33,13 +33,16 @@
                 <li class="nav-item">
                     <a class="nav-link active" th:href="@{/user}">User panel</a>
                 </li>
+                <li class="nav-item">
+                    <a sec:authorize="hasAuthority('ROLE_ADMIN')" class="nav-link" th:href="@{/admin}">Admin panel</a>
+                </li>
             </ul>
         </div>
 
         <!--        правый блок-->
         <div class="col-sm-10 bg-light">
             <br>
-            <h1>User information-page</h1>
+            <h1>User panel</h1>
 
             <!--            Таблица User-->
             <div class="tab-content">
